<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_home"
    android:layout_height="match_parent"
    tools:context=".About">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        >



        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/iconAbout"
            android:src="@drawable/encrypto"
            android:layout_margin="40dp"
            android:layout_gravity="center"
            />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:id="@+id/textLay1"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="#006666"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Encryption:"
            android:textSize="22sp"
            android:textColor="#993300"
            android:layout_marginBottom="5dp"
            android:id="@+id/textLay2"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encryption"
            android:id="@+id/textLay3"
            android:textSize="20sp"
            android:textColor="#006666"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DeCryption:"
            android:textColor="#993300"
            android:layout_marginBottom="5dp"
            android:textSize="22sp"
            android:id="@+id/textLay4"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decrypt"
            android:id="@+id/textLay5"
            android:textSize="20sp"
            android:textColor="#006666"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="History:"
            android:textColor="#993300"
            android:layout_marginBottom="5dp"
            android:textSize="22sp"
            android:id="@+id/textLay6"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:id="@+id/textLay7"
            android:textSize="20sp"
            android:textColor="#006666"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note1"
            android:textColor="#006666"
            android:textSize="20sp"
            android:id="@+id/textLay8"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Note:"
            android:textColor="#993300"
            android:layout_marginBottom="5dp"
            android:textSize="22sp"
            android:id="@+id/textLay9"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note2"
            android:id="@+id/textLay10"
            android:textColor="#006666"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/madlabs"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/devName"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="Developed by MADLabs"
                android:gravity="center"/>



        </LinearLayout>
        
    </LinearLayout>


    </ScrollView>


    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/canceldetailed"
        android:layout_margin="20dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/closeabout"/>

</RelativeLayout>